opam-version: "1.2"
maintainer: "jonathan.ludlam@citrix.com"
authors: [ "David Scott" "Jon Ludlam" "Si Beaumont" ]
homepage: "https://github.com/mirage/shared-block-ring"
bug-reports: "https://github.com/mirage/shared-block-ring/issues/"
dev-repo: "https://github.com/mirage/shared-block-ring.git"
license: "ISC"
tags: [
  "org:mirage"
  "org:xapi-project"
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
build-test: [
  ["dune" "runtest" "-p" name "-j" jobs]
]
depends: [
  "dune" {build & >= "1.0"}
  "cstruct" {>= "3.0.0"}
  "ppx_cstruct"
  "ppx_sexp_conv" {>="v0.10.0"}
  "lwt" 
  "lwt_log"
  "mirage-types-lwt" {>= "3.0.0"}
  "mirage-block-unix"
  "mirage-clock-unix"
  "sexplib"
  "io-page"
  "io-page-unix" {>= "2.0.0"}
  "cmdliner"
  "bisect_ppx"
  "result"
  "rresult"
  "duration"
  "ounit" {test}
]
