opam-version: "1.2"
maintainer: "jonathan.ludlam@citrix.com"
authors: [ "David Scott" "Jon Ludlam" "Si Beaumont" ]
homepage: "https://github.com/mirage/shared-block-ring"
bug-reports: "https://github.com/mirage/shared-block-ring/issues/"
dev-repo: "https://github.com/mirage/shared-block-ring.git"
license: "ISC"
tags: [
  "org:mirage"
  "org:xapi-project"
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
]
build-test: [
  ["dune" "runtest" "-p" name "-j" jobs]
]
depends: [
  "dune"
  "cstruct" {>= "3.0.0"}
  "ppx_cstruct"
  "ppx_sexp_conv" {>="v0.10.0"}
  "lwt"
  "lwt_log"
  "mirage-block-unix" { < "3.0.0" }
  "mirage-clock-unix" { >= "3.0.0" }
  "mirage-time-unix" { >= "2.0.1"}
  "sexplib"
  "io-page"
  "io-page-unix" {>= "2.0.0"}
  "cmdliner"
  "bisect_ppx" {>= "2.0.0"}
  "result"
  "rresult"
  "duration"
  "ounit" {test}
]
