(library
 (name shared_block)
 (public_name shared-block-ring)
 (synopsis "Simple persistent queue over a block device")
 (libraries cstruct lwt mirage-block mirage-clock mirage-time io-page result
   rresult sexplib sexplib0 duration)
 (modules_without_implementation monad)
 (preprocess
  (pps ppx_sexp_conv bisect_ppx --conditional)))
